[package]
name = "rmtarget"
description = "Find and remove rust build target directory."
version = "0.1.0"
homepage = "https://github.com/lqlklu/rmtarget/"
repository = "https://github.com/lqlklu/rmtarget/"
readme = "README.md"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
anyhow = "1.0"
fs_extra = "1.2"
lazy_static = "1.4"
chrono = "0.4"
